Thread solution + fixes